--- a/style.css
+++ b/style.css
@@ -9,6 +9,16 @@ body {
   color: #fafaf9;
   font-family: "Sono", sans-serif;
   padding: 40px;
+  padding: 48px 64px;
+}
+
+/* Main LAYOUT */
+.container {
+  max-width: 1000px;
+  background-color: orangered;
+  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .header {
@@ -18,10 +28,25 @@ body {
   justify-content: space-between;
 }
 
+/* LAYOUT */
+
+.main {
+  display: grid;
+  grid-template-columns: 250px 1fr;
+  gap: 48px;
+}
+
+/* ELEMENTS */
+
 .logo {
   display: flex;
   align-items: center;
   gap: 16px;
+}
+
+.logo img {
+  width: 68px;
+  height: 68px;
 }
 
 .fact-form {
@@ -45,9 +70,11 @@ h1 {
   background-color: #44403c;
   margin-bottom: 16px;
   padding: 16px 24px;
+  letter-spacing: -1px;
 
   display: flex;
   align-items: center;
+  gap: 24px;
 }
 
 .tag {
@@ -60,6 +87,22 @@ h1 {
   padding-right: 10px;
 }
 
+.vote-buttons {
+  margin-left: auto;
+}
+
 ul {
   list-style: none;
+}
+
+.source:link,
+.source:visited {
+  color: #a8a29e;
+  margin-left: 10px;
+  transition: 0.3s;
+}
+
+.source:hover,
+.source:active {
+  color: #3b82f6;
 }
