--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 /* Main LAYOUT */
 .container {
   max-width: 1000px;
-  background-color: orangered;
+  /* background-color: orangered; */
   margin: 0 auto;
   margin-left: auto;
   margin-right: auto;
@@ -64,6 +64,10 @@ h1 {
   margin-top: 6px;
 }
 
+.category {
+  margin-bottom: 16px;
+}
+
 .fact {
   font-size: 20px;
   line-height: 1.4;
@@ -85,10 +89,19 @@ h1 {
   padding-top: 3px;
   padding-left: 10px;
   padding-right: 10px;
+  border-radius: 100px;
 }
 
 .vote-buttons {
   margin-left: auto;
+}
+
+.vote-buttons button {
+  border: none;
+  background-color: #78716c;
+  font-size: 18px;
+  padding: 6px 12px;
+  border-radius: 100px;
 }
 
 ul {
@@ -116,9 +129,26 @@ ul {
   padding: 16px 0 13px;
   background-image: linear-gradient(135deg, #3b82f6, #ef4444, #16a34a, #eab308);
   color: inherit;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.btn:hover {
+  transform: scale(110%) rotate(-2deg);
 }
 
 .btn-large {
   font-size: 20px;
   padding: 20px 32px 17px;
+}
+
+.btn-all-categories {
+  margin-bottom: 16px;
+  width: 100%;
+}
+
+.btn-category {
+  width: 100%;
+  background-image: none;
 }
